--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,18 +8,24 @@ mat-toolbar {
     padding-left: base.$padding;
     padding-right: base.$padding;
 
-    .logo-div {
-        height: 100px;
-        width: 100px;
-        overflow: hidden;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    div {
+        .menu-a {
+            display: none;
+        }
 
-        .logo-img {
-            height: 90%;
-            width: 90%;
-            object-fit: contain;
+        .logo-div {
+            height: 100px;
+            width: 100px;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .logo-img {
+                height: 90%;
+                width: 90%;
+                object-fit: contain;
+            }
         }
     }
 
@@ -74,63 +80,35 @@ mat-toolbar {
     }
 }
 
-.nav-menu {
-    background-color: #1E1E1E;
-    width: 100%;
-    height: 40px;
-    display: flex;
-    justify-content: space-between;
-    color: #FFFFFF;
-    padding-left: base.$padding;
-    padding-right: base.$padding;
 
-    a {
-        all: unset;
-    }
-
-    .menu-list {
-        list-style-type: none;
-        display: flex;
-        flex-basis: 40%;
-        justify-content: space-evenly;
-        align-items: center;
-
-    }
-
-    .a-categories {
-        background-color: #FFD701;
-        color: #1E1E1E;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-left: 24px;
-        padding-right: 24px;
-    }
-}
 
 @media (max-width: 500px) {
     header {
-        min-width: 100%;
         mat-toolbar {
             display: flex;
             width: 100%;
-            
+
             justify-content: space-between;
             padding-left: base.$mobile_padding;
             padding-right: base.$mobile_padding;
 
-            .logo-div {
-                height: 50px;
-                width: 50px;
-                overflow: hidden;
-                display: flex;
-                justify-content: center;
-                align-items: center;
+            div {
+                .menu-a{
+                    display: inherit;
+                }
+                .logo-div {
+                    height: 50px;
+                    width: 50px;
+                    overflow: hidden;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
 
-                .logo-img {
-                    height: 90%;
-                    width: 90%;
-                    object-fit: contain;
+                    .logo-img {
+                        height: 90%;
+                        width: 90%;
+                        object-fit: contain;
+                    }
                 }
             }
 
@@ -185,38 +163,18 @@ mat-toolbar {
             }
         }
 
-        .nav-menu {
-            background-color: #1E1E1E;
+        .navigator{
+            position: absolute;
+            height: calc(100% - 56px);
             width: 100%;
-            height: 40px;
-            display: flex;
-            justify-content: space-between;
-            color: #FFFFFF;
-            padding-left: base.$padding;
-            padding-right: base.$padding;
+        }
 
-            a {
-                all: unset;
-            }
+        .opened-nav{
+            left: 0;
+        }
 
-            .menu-list {
-                list-style-type: none;
-                display: flex;
-                flex-basis: 40%;
-                justify-content: space-evenly;
-                align-items: center;
-
-            }
-
-            .a-categories {
-                background-color: #FFD701;
-                color: #1E1E1E;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                padding-left: 24px;
-                padding-right: 24px;
-            }
+        .closed-nav{
+            left: -100%;
         }
     }
 }
