--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -7,17 +7,20 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
     .login-form {
         height: 360px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
-        .input-class{
+
+        .input-class {
             display: flex;
             flex-direction: column;
             width: 40%;
         }
+
         input {
             height: 40px;
             outline-width: 0;
@@ -27,7 +30,7 @@
             margin-top: 6px;
         }
 
-        .login-btn{
+        .login-btn {
             height: 40px;
             width: 40%;
             border: none;
@@ -35,6 +38,51 @@
             font-weight: bolder;
             font-size: 1rem;
             background-color: #FFD701;
+        }
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .login-div {
+        padding-left: base.$mobile_padding;
+        padding-right: base.$mobile_padding;
+        height: 500px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
+
+        .login-form {
+            height: 360px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-evenly;
+
+            .input-class {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+            }
+
+            input {
+                height: 40px;
+                outline-width: 0;
+                border: none;
+                border-radius: 999px;
+                padding-left: 12px;
+                margin-top: 6px;
+            }
+
+            .login-btn {
+                height: 40px;
+                width: 100%;
+                border: none;
+                border-radius: 6px;
+                font-weight: bolder;
+                font-size: 1rem;
+                background-color: #FFD701;
+            }
         }
     }
 }
