Added different screen size

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header>
+<header >
     <mat-toolbar>
 
         <div style="display: flex; justify-content: center; align-items: center;">
@@ -22,8 +22,8 @@
             </div>
         </div>
     </mat-toolbar>
-
-    <app-navigation class="navigator closed-nav"></app-navigation>
+    <div class="background"></div>
+    <app-navigation class="navigator"></app-navigation>
 
 </header>
 <router-outlet />
@@ -37,5 +37,19 @@
         <li>Product 2</li>
         <li>Product 3</li>
         <li>Product 4</li>
+        <li>Product 1</li>
+        <li>Product 2</li>
+        <li>Product 3</li>
+        <li>Product 4</li>
+        <li>Product 1</li>
+        <li>Product 2</li>
+        <li>Product 3</li>
+        <li>Product 1</li>
+        <li>Product 2</li>
+        <li>Product 3</li>
+        <li>Product 4</li>
+        <li>Product 1</li>
+        <li>Product 2</li>
+        <li>Product 3</li>
     </ul>
 </section>
