--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,6 +1,3 @@
-<div class="background">
-
-</div>
 <nav class="nav-menu">
     <a class="a-categories" (click)="showCategories()">
         <div style="width: 100%;display: flex; justify-content: space-between; align-items: center; padding: 16px;">
@@ -8,9 +5,9 @@
                 <mat-icon class="menu-icon">menu</mat-icon>
                 <p>All Categories</p>
             </div>
-            <mat-icon [fontIcon]="openedCategories ? 'keyboard_arrow_up' : 'keyboard_arrow_down'"></mat-icon>
+            <mat-icon class="arrow" [fontIcon]="openedCategories ? 'keyboard_arrow_up' : 'keyboard_arrow_down'"></mat-icon>
         </div>
-        <ul class=" categories">
+        <ul class="categories">
             <li class="category-item">One</li>
             <li class="category-item">One</li>
             <li class="category-item">One</li>
