--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -10,7 +10,6 @@
     padding-left: base.$padding;
     padding-right: base.$padding;
 
-
     a {
         all: unset;
     }
@@ -34,9 +33,16 @@
         position: relative;
         cursor: pointer;
 
-        .categories {
+        .arrow{
             display: none;
+        }
+
+        .categories {
+            display: flex;
+            flex-direction: column;
             width: 100%;
+            height: 0;
+            overflow: hidden;
             position: absolute;
             color: black;
             list-style-type: none;
@@ -44,13 +50,21 @@
             padding-left: 16px;
             top: 100%;
             left: 0;
+
+            .category-item {
+                height: 56px;
+                display: flex;
+                align-items: center;
+            }
         }
 
-        @media only screen and (min-width: 501px) {
+        @media only screen and (min-width: 600px) {
             &:hover {
                 .categories {
-                    display: flex;
-                    flex-direction: column;
+                    height: auto;
+                    width: 100%;
+                    animation: animate-categories;
+                    animation-duration: 500ms;
                 }
             }
         }
@@ -68,19 +82,11 @@
 }
 
 
-@media only screen and (max-width: 500px) {
-    .background {
-        display: inherit;
-        position: absolute;
-        height: calc(100% - 56px);
-        width: 100%;
-        background-color: #1E1E1E;
-        opacity: 0.5;
-    }
+@media only screen and (max-width: 599px) {
 
     .nav-menu {
         width: 80%;
-        height: calc(100% - 56px);
+        height: 100%;
         position: absolute;
         flex-direction: column;
         justify-content: start;
@@ -111,6 +117,11 @@
             padding-right: 0;
             cursor: pointer;
 
+            .arrow{
+                display: inherit;
+            }
+
+            
             .categories {
                 width: 100%;
                 color: black;
@@ -119,19 +130,24 @@
                 top: 0;
                 left: 0;
                 position: relative;
-                .category-item{
-                    padding: 12px;
+
+                .category-item {
+                    padding-left: 12px;
                 }
             }
 
             .show-categories {
-                display: flex;
-                flex-direction: column;
+                width: 100%;
+                height: 100%;
+                animation: animate-categories;
+                animation-duration: 500ms;
             }
 
-            .menu-icon{
+            .menu-icon {
                 display: none;
             }
+
+
         }
 
         .free-div {
@@ -140,4 +156,14 @@
     }
 
 
+}
+
+@keyframes animate-categories {
+    from {
+        height: 0;
+    }
+
+    to {
+        height: 336px;
+    }
 }
