--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,17 +1,17 @@
 <div class="login-div">
     <h2>Log In Your Account</h2>
 
-    <form class="login-form">
+    <form class="login-form" [formGroup]="loginGroup" (ngSubmit)="login()">
         <div class="input-class">
             <label style="font-weight: bolder;">Email</label>
-            <input placeholder="Email" />
+            <input placeholder="Email" formControlName="email" />
         </div>
         <div class="input-class">
             <label style="font-weight: bolder;">Password</label>
-            <input placeholder="Password" />
+            <input placeholder="Password" formControlName="password" type="password" />
         </div>
 
-        <button class="login-btn">Log In</button>
+        <button class="login-btn" (click)="login()">Log In</button>
     </form>
 
     <div style="display: flex;">
