--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -38,6 +38,7 @@
             font-weight: bolder;
             font-size: 1rem;
             background-color: #FFD701;
+            cursor: pointer;
         }
     }
 }
