--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -4,26 +4,26 @@
             <label>Product Images</label>
             <div class="product-images">
                 <div class="image">
-                    <label for="inputFileZero"><img [src]="showImage(0)" />
+                    <label for="inputFileZero"><img [src]="imageUrls[0]" />
                         <p>Add an image</p>
                     </label>
                     <input class="input-file" type="file" (change)="onImageAdded($event, 0)" id="inputFileZero" />
                 </div>
 
                 <div class="image">
-                    <label for="inputFileOne"><img [src]="showImage(1)" />
+                    <label for="inputFileOne"><img [src]="imageUrls[1]" />
                         <p>Add an image</p>
                     </label>
                     <input class="input-file" type="file" id="inputFileOne" (change)="onImageAdded($event, 1)" />
                 </div>
                 <div class="image">
-                    <label for="inputFileTwo"><img [src]="showImage(2)" />
+                    <label for="inputFileTwo"><img [src]="imageUrls[2]" />
                         <p>Add an image</p>
                     </label>
                     <input class="input-file" type="file" id="inputFileTwo" (change)="onImageAdded($event, 2)" />
                 </div>
                 <div class="image">
-                    <label for="inputFileThree"><img [src]="showImage(3)" />
+                    <label for="inputFileThree"><img [src]="imageUrls[3]" />
                         <p>Add an image</p>
                     </label>
                     <input class="input-file" type="file" id="inputFileThree" (change)="onImageAdded($event, 3)" />
@@ -39,6 +39,17 @@
             <label>Product Description</label>
             <textarea placeholder="Description" formControlName="productDescription"></textarea>
         </div>
+
+        <mat-form-field>
+            <mat-label>Category</mat-label>
+            <mat-select formControlName="productCategory">
+                <mat-option [value]="categories[0]">{{ categories[0] }}</mat-option>
+                <mat-option [value]="categories[1]">{{ categories[1] }}</mat-option>
+                <mat-option [value]="categories[2]">{{ categories[2] }}</mat-option>
+                <mat-option [value]="categories[3]">{{ categories[3] }}</mat-option>
+                <mat-option [value]="categories[4]">{{ categories[4] }}</mat-option>
+            </mat-select>
+        </mat-form-field>
         <ul style="list-style-type: none; display: flex; justify-content: space-between;">
             <li style="flex-basis: 48%;">
                 <label>Quantity</label>
@@ -55,7 +66,7 @@
         </ul>
 
 
-        <button class="save-btn">Save</button>
+        <button class="save-btn" type="button" (click)="save()" [disabled]="disabledBtn">Save</button>
 
     </form>
 
