--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -5,22 +5,20 @@
                 <mat-icon class="menu-icon">menu</mat-icon>
                 <p>All Categories</p>
             </div>
-            <mat-icon class="arrow" [fontIcon]="openedCategories ? 'keyboard_arrow_up' : 'keyboard_arrow_down'"></mat-icon>
+            <mat-icon class="arrow"
+                [fontIcon]="openedCategories ? 'keyboard_arrow_up' : 'keyboard_arrow_down'"></mat-icon>
         </div>
         <ul class="categories">
-            <li class="category-item">One</li>
-            <li class="category-item">One</li>
-            <li class="category-item">One</li>
-            <li class="category-item">One</li>
-            <li class="category-item">One</li>
-            <li class="category-item">One</li>
+            @for (item of categories; track $index) {
+            <li class="category-item">{{ item }}</li>
+            }
         </ul>
     </a>
 
 
     <ul class="menu-list">
         <li style="padding: 16px;"><a href="#">Home</a></li>
-        <li style="padding: 16px;"><a href="#">Shop</a></li>
+        <li style="padding: 16px;"><a routerLink="shop" routerLinkActive="active">Shop</a></li>
     </ul>
     <div class="free-div">
         <p>*Free Shipping On Orders <span style="color: red;">+{{ 500 | currency :'USD' : 'symbol' :
