--- a/src/app/shop/products/product-item/product-item.component.html
+++ b/src/app/shop/products/product-item/product-item.component.html
@@ -6,7 +6,7 @@
         <p class="product-title">{{ product?.productTitle }}</p>
     </li>
 
-    <li style="display: flex; align-items: center; justify-content: space-between;">
+    <li style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 16px;">
         <p style="text-align: center;" class="price">{{ product?.productPrice | currency }}</p>
         <mat-icon fontIcon="arrow_forward" style="color: #1E1E1E; background-color: darkgray; border-radius: 999px;"></mat-icon>
     </li>
