--- a/src/app/add-product/add-product.component.scss
+++ b/src/app/add-product/add-product.component.scss
@@ -37,7 +37,7 @@
                 img {
                     height: 100px;
                     width: 100px;
-                    object-fit: cover;
+                    object-fit: contain;
                 }
 
                 p {
