--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -17,8 +17,10 @@
 
 
     <ul class="menu-list">
-        <li style="padding: 16px;"><a href="#">Home</a></li>
-        <li style="padding: 16px;"><a routerLink="shop" routerLinkActive="active">Shop</a></li>
+        <li style="padding: 16px;"><a style="cursor: pointer;" routerLink="home" routerLinkActive="active"
+                (click)="click(1)">Home</a></li>
+        <li style="padding: 16px; cursor: pointer;"><a style="cursor: pointer;" routerLink="shop"
+                routerLinkActive="active" (click)="click(2)">Shop</a></li>
     </ul>
     <div class="free-div">
         <p>*Free Shipping On Orders <span style="color: red;">+{{ 500 | currency :'USD' : 'symbol' :
