--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -20,6 +20,12 @@
         flex-basis: 40%;
         justify-content: space-evenly;
         align-items: center;
+        a{
+            color: #FFD701;
+            &:not(.clicked){
+                color: white;
+            }
+        }
     }
 
     .a-categories {
