--- a/src/app/shop/products/products.component.scss
+++ b/src/app/shop/products/products.component.scss
@@ -1,11 +1,29 @@
-.products{
+.products {
     display: flex;
     width: 100%;
     flex-wrap: wrap;
     justify-content: space-between;
-    .product-item{
-        height: 50%;
+
+    .product-item {
         flex-basis: 23%;
+        width: 23%;
         margin-top: 16px;
+        flex-shrink: 1;
+    }
+
+    li {
+        width: 100%;
+        align-content: center;
+        p {
+            text-align: center;
+            padding: 16px;
+        }
+    }
+
+}
+
+@media only screen and (max-width: 599px) {
+    .products {
+        flex-direction: column;
     }
 }
