--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,28 +2,29 @@
     <mat-toolbar>
 
         <div style="display: flex; justify-content: center; align-items: center;">
-            <a class="menu-a" (click)="openNavigator()"><mat-icon>menu</mat-icon></a>
+            <a class="menu-a" (click)="openNavigator()"><mat-icon class="material-symbols-outlined"
+                    fontIcon="menu"></mat-icon></a>
             <div class="logo-div">
-                <img class="logo-img" src="logo.png" />
+                <a routerLink="/cart" routerLinkActive="active"><img class="logo-img" src="logo.png" /></a>
             </div>
         </div>
         <div class="search-div">
             <input class="search-input" />
             <div class="search-icon-div">
-                <mat-icon fontIcon="search"></mat-icon>
+                <mat-icon class="material-symbols-outlined" fontIcon="search"></mat-icon>
             </div>
         </div>
         <div class="options-div">
             @if(userType !== null && userType === 'owner' && userTokenValidation){
             <div style="cursor: pointer;" (click)="navigateToAddProduct()">
-                <mat-icon class="material-icons-outlined" fontIcon="add"></mat-icon>
+                <mat-icon class="material-symbols-outlined" fontIcon="add"></mat-icon>
             </div>
             }
-            <div style="cursor: pointer;">
-                <mat-icon class="material-icons-outlined" fontIcon="shopping_cart"></mat-icon>
+            <div style="cursor: pointer;" routerLink="/cart" routerLinkActive="active">
+                <mat-icon class="material-symbols-outlined" fontIcon="shopping_bag"></mat-icon>
             </div>
             <div style="cursor: pointer;" (click)="clickRequest()">
-                <mat-icon class="material-icons-outlined" fontIcon="person"></mat-icon>
+                <mat-icon class="material-symbols-outlined" fontIcon="person"></mat-icon>
             </div>
         </div>
     </mat-toolbar>
