--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,12 +4,12 @@
 <ul class="panel">
     <li class="panel-nav">
         <div class="info-div">
-            <p style="font-weight: bold;">Abdelillah Tamoussat</p>
-            <p>atamossat&#64;gmail.com</p>
+            <p style="font-weight: bold;"></p>
+            <p></p>
         </div>
         <div style="margin-top: 16px;">
-            <a><mat-icon>settings</mat-icon>Settings</a>
-            <a><mat-icon>logout</mat-icon>Log Out</a>
+            <a><mat-icon class="material-symbols-outlined">settings</mat-icon>Settings</a>
+            <a (click)="logout()"><mat-icon class="material-symbols-outlined">logout</mat-icon>Log Out</a>
         </div>
     </li>
     <li class="panel-result">
