--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -10,7 +10,7 @@
         </div>
         <ul class="categories">
             @for (item of categories; track $index) {
-            <li class="category-item">{{ item }}</li>
+            <li class="category-item"><a href="#">{{ item }}</a></li>
             }
         </ul>
     </a>
