--- a/src/app/add-product/add-product.component.scss
+++ b/src/app/add-product/add-product.component.scss
@@ -13,24 +13,28 @@
         --mat-select-panel-background-color: #e9e8e8;
         display: flex;
         flex-direction: column;
-        height: 80%;
+        height: 100%;
         justify-content: space-evenly;
 
         .product-images {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
             margin-top: 12px;
 
             #inputFileZero,
             #inputFileOne,
             #inputFileTwo,
-            #inputFileThree {
+            #inputFileThree,
+            #inputFileFour {
                 display: none;
             }
 
             .image {
                 display: flex;
                 flex-direction: column;
+                width: 25%;
                 align-items: center;
                 font-size: 14px;
 
