--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -39,6 +39,7 @@ header{
             align-items: center;
             padding: 16px;
             color: base.$black;
+            cursor: pointer;
         }
     }
     li{
