--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -20,7 +20,7 @@
         flex-basis: 40%;
         justify-content: space-evenly;
         align-items: center;
-        a{
+        li{
             color: #FFD701;
             &:not(.clicked){
                 color: white;
@@ -34,11 +34,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding-left: 24px;
-        padding-right: 24px;
+        padding-left: 12px;
+        padding-right: 12px;
         position: relative;
         cursor: pointer;
-
         .arrow{
             display: none;
         }
@@ -55,12 +54,13 @@
             background-color: white;
             top: 100%;
             left: 0;
-
             .category-item {
                 height: 56px;
                 display: flex;
                 align-items: center;
-                padding-left: 16px;
+                padding-left: 12px;
+                padding-right: 12px;
+                font-size: 14px;
                 &:hover{
                     background-color: #e9e8e8;
                 }
@@ -83,6 +83,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        font-size: clamp(1.1vw, 1.2vw, 1.3vw);
     }
 
     .background {
@@ -112,6 +113,12 @@
             align-items: start;
             z-index: 10;
             color: #1E1E1E;
+            a{
+                color: base.$black;
+                &:not(.clicked){
+                    color: base.$black;
+                }
+            }
         }
 
         .a-categories {
@@ -141,7 +148,7 @@
                 position: relative;
 
                 .category-item {
-                    padding-left: 12px;
+                    padding-left: 28px;
                 }
             }
 
@@ -173,6 +180,6 @@
     }
 
     to {
-        height: 336px;
+        height: 280px;
     }
 }
