--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
+@use 'base' as base;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -51,6 +52,7 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    --mat-stepper-header-selected-state-icon-backgrsound-color: green;
 }
 html, body { height: 100%; }
 body { margin: 0;}
