--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -18,8 +18,11 @@
 
     <ul class="menu-list">
         <li style="padding: 16px;"><a style="cursor: pointer;" routerLink="home" routerLinkActive="active"
+            id="home"
+        
                 (click)="click(1)">Home</a></li>
         <li style="padding: 16px; cursor: pointer;"><a style="cursor: pointer;" routerLink="shop"
+            id="shop"
                 routerLinkActive="active" (click)="click(2)">Shop</a></li>
     </ul>
     <div class="free-div">
