--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -20,7 +20,7 @@
         flex-basis: 40%;
         justify-content: space-evenly;
         align-items: center;
-        li{
+        a{
             color: #FFD701;
             &:not(.clicked){
                 color: white;
