--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -11,11 +11,115 @@ header {
         font-size: 2rem;
     }
 }
-.cart-div{
-    
+
+.cart-div {
+
     --mat-stepper-container-color: transparent;
     --mat-stepper-header-selected-state-icon-background-color: green;
 
-    padding-left: base.$padding;
-    padding-right: base.$padding;
+    padding: 0 base.$padding;
+
+    .products-panel {
+        display: flex;
+        gap: 2%;
+
+        .products {
+            flex-basis: 74%;
+            width: 74%;
+            background-color: white;
+            border-radius: 8px;
+            padding: 16px;
+
+
+
+            tr {
+                th {
+                    padding: 16px;
+                }
+
+                .product-details {
+                    width: 50%;
+                }
+
+                td {
+                    img {
+                        display: inline;
+                        height: 50px;
+                        width: 50px;
+                        object-fit: contain;
+                    }
+                }
+
+                .product-title {
+                    display: -webkit-box;
+                    font-weight: 500;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    -webkit-line-clamp: 1;
+                    -webkit-box-orient: vertical;
+                }
+
+                .product-quantity {
+                    display: flex;
+                    justify-content: space-around;
+                    align-items: center;
+                    padding: 16px 0px;
+
+                    button {
+                        border-radius: 999px;
+                        border-width: 0;
+                        height: 32px;
+                        width: 32px;
+                        padding: 4px;
+                        background-color: base.$black;
+                        color: white;
+                        cursor: pointer;
+                    }
+
+                }
+            }
+        }
+
+        .total {
+            flex-basis: 24%;
+            width: 24%;
+            background-color: white;
+            border-radius: 6px;
+            padding: 16px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            .checkout-btn {
+                background-color: base.$yellow;
+                width: 100%;
+                height: 40px;
+                border-width: 0;
+                border-radius: 6px;
+                cursor: pointer;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 845px) {
+    .cart-div {
+        padding: 0px base.$mobile_padding;
+        .products-panel {
+            flex-direction: column;
+
+            .products {
+                width: 100%;
+                overflow-x: scroll;
+            }
+            .total{
+                width: 100%;
+                margin-top: 12px;
+                .checkout-btn{
+                    margin-top: 12px;
+                }
+            }
+        }
+
+    }
 }
