--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,41 @@
-<mat-sidenav-container>
+<mat-sidenav-container style="height: 100%;">
     <mat-sidenav #drawer mode="over">
         <app-navigation></app-navigation>
     </mat-sidenav>
-        <header>
-            <mat-toolbar>
+    <header>
+        <mat-toolbar>
 
-                <div style="display: flex; justify-content: center; align-items: center;">
-                    <a class="menu-a" (click)="drawer.toggle()"><mat-icon class="material-symbols-outlined"
-                            fontIcon="menu"></mat-icon></a>
-                    <div class="logo-div">
-                        <a routerLink="/cart" routerLinkActive="active"><img class="logo-img" src="logo.png" /></a>
-                    </div>
+            <div style="display: flex; justify-content: center; align-items: center;">
+                <a class="menu-a" (click)="drawer.toggle()"><mat-icon class="material-symbols-outlined"
+                        fontIcon="menu"></mat-icon></a>
+                <div class="logo-div">
+                    <a routerLink="home" routerLinkActive="active"><img class="logo-img" src="logo.png" /></a>
                 </div>
-                <div class="search-div">
-                    <input class="search-input" />
-                    <div class="search-icon-div">
-                        <mat-icon class="material-symbols-outlined" fontIcon="search"></mat-icon>
-                    </div>
+            </div>
+            <div class="search-div">
+                <input class="search-input" />
+                <div class="search-icon-div">
+                    <mat-icon class="material-symbols-outlined" fontIcon="search"></mat-icon>
                 </div>
-                <div class="options-div">
-                    @if(userType !== null && userType === 'owner' && userTokenValidation){
-                    <div style="cursor: pointer;" (click)="navigateToAddProduct()">
-                        <mat-icon class="material-symbols-outlined" fontIcon="add"></mat-icon>
-                    </div>
-                    }
-                    <div style="cursor: pointer;" routerLink="/cart" routerLinkActive="active">
-                        <mat-icon class="material-symbols-outlined" fontIcon="shopping_bag"></mat-icon>
-                    </div>
-                    <div style="cursor: pointer;" (click)="clickRequest()">
-                        <mat-icon class="material-symbols-outlined" fontIcon="person"></mat-icon>
-                    </div>
+            </div>
+            <div class="options-div">
+                @if(userType !== null && userType === 'owner' && userTokenValidation){
+                <div style="cursor: pointer;" (click)="navigateToAddProduct()">
+                    <mat-icon class="material-symbols-outlined" fontIcon="add"></mat-icon>
                 </div>
-            </mat-toolbar>
-            <div class="background"></div>
-            <app-navigation class="navigator"></app-navigation>
+                <div style="cursor: pointer;" routerLink="/cart" routerLinkActive="active">
+                    <mat-icon class="material-symbols-outlined" fontIcon="shopping_bag"></mat-icon>
+                </div>
+                }
 
-        </header>
-        <router-outlet />
+                <div style="cursor: pointer;" (click)="clickRequest()">
+                    <mat-icon class="material-symbols-outlined" fontIcon="person"></mat-icon>
+                </div>
+            </div>
+        </mat-toolbar>
+        <div class="background"></div>
+        <app-navigation class="navigator"></app-navigation>
+
+    </header>
+    <router-outlet />
 </mat-sidenav-container>
