--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -19,6 +19,17 @@ header {
 
     padding: 0 base.$padding;
 
+    .checkout-btn,
+    .continue-btn {
+        background-color: base.$yellow;
+        width: 100%;
+        height: 40px;
+        border-width: 0;
+        border-radius: 6px;
+        cursor: pointer;
+        margin-top: 16px;
+    }
+
     .products-panel {
         display: flex;
         gap: 2%;
@@ -90,13 +101,55 @@ header {
             flex-direction: column;
             justify-content: space-between;
 
-            .checkout-btn {
-                background-color: base.$yellow;
+        }
+    }
+
+
+
+    .shipping {
+        display: flex;
+        flex-direction: column;
+
+        input {
+            height: 40px;
+            outline-width: 0;
+            border: none;
+            border-radius: 999px;
+            padding-left: 12px;
+            margin-top: 6px;
+        }
+
+
+    }
+
+    .confirmation-ul {
+        display: flex;
+        flex-direction: column;
+        list-style-type: none;
+        li {
+            background-color: white;
+            border-radius: 8px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 16px 16px 8px 16px;
+            margin-top: 16px;
+            .checked-icn {
+                border-radius: 999px;
+                background-color: green;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: white;
+                width: 60px;
+                height: 60px;
+
+            }
+            h3, p{
                 width: 100%;
-                height: 40px;
-                border-width: 0;
-                border-radius: 6px;
-                cursor: pointer;
+            }
+            p{
+                margin-top: 8px;
             }
         }
     }
@@ -105,6 +158,7 @@ header {
 @media only screen and (max-width: 845px) {
     .cart-div {
         padding: 0px base.$mobile_padding;
+
         .products-panel {
             flex-direction: column;
 
@@ -112,10 +166,12 @@ header {
                 width: 100%;
                 overflow-x: scroll;
             }
-            .total{
+
+            .total {
                 width: 100%;
                 margin-top: 12px;
-                .checkout-btn{
+
+                .checkout-btn {
                     margin-top: 12px;
                 }
             }
