--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,7 @@
 header {
     position: sticky;
     top: 0;
+    z-index: 66;
     mat-toolbar {
         --mat-toolbar-standard-height: 120px;
         --mat-toolbar-container-background-color: white;
